# Airlytics

./: app.py  pyproject.toml
.streamlit/: config.toml
assets/: icons.py  oizom_logo.py
attached_assets/: Pasted-Air-Quality-Report-Generator-Report-Configuration-Report-Title-Air-Quality-Analysis-Report-Rep-1742971291079.txt  ai_powered_dashboard (2).py  app.py  package-lock.json  pyproject.toml
components/: dashboard.py  map_view.py  report_generator.py
utils/: ai_insights.py  data_processor.py  visualization.py
